# LS_Racing

./: CMakeLists.txt  LS_allegro.c  LS_allegro.h  README.md  carrera.c  carrera.h  clasificacion.c  clasificacion.h  configuracion.c  configuracion.h  grafico.c  grafico.h  lectura.c  lectura.h  lista.c  lista.h  main.c  tipos.h
